--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.0.0-beta.55",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
